Change the checkbox position and content!

--- a/form_nostyle.html
+++ b/form_nostyle.html
@@ -55,7 +55,20 @@
         <br>
         <input type="text" id="Zip" name="zip">
         <br>
-        <!--3.radio- 총 1개-->
+        <!--3.checkbox - 총 2개-->
+        <label for="Check_agree1">
+            <input type="checkbox" id="Check_agree1" name="agree_1" value="Yes">
+            Shipping address is the same as my billing address
+        </label>
+        <br>
+        <label for="Check_agree2">
+            <input type="checkbox" id="Check_agree2" name="agree_2" value="Yes">
+            Save this information for next time
+
+        </label>
+
+        
+        <!--4.radio- 총 1개-->
         <a>Payment</a>
         <br>
         <label for="Payment_1">
@@ -84,30 +97,17 @@
         <br>
         <input type="text" id="CVV" name="cvv">
         <br>
-        <!--4.date - 총 1개-->
+        <!--5.date - 총 1개-->
         <label for="Order_day">Order day</label>
         <br>
         <input type="date" id="Order_day" name="order_day">
         <br>
-        <!--5.textarea - 총 1개-->
+        <!--6.textarea - 총 1개-->
         <label for="Memo">Memo</label>
         <br>
         <textarea id="Memo" name="memo"></textarea>
         <br>
-        <!--6.checkbox - 총 1개-->
-        <a>Agreement</a>
-        <br>
-        <label for="Check_agree1">
-            <input type="checkbox" id="Check_agree1" name="agree_1" value="Yes">
-            You can know that you can call to me.
-        </label>
-        <br>
-        <label for="Check_agree2">
-            <input type="checkbox" id="Check_agree2" name="agree_2" value="Yes">
-            You read the message from our company form.
-
-        </label>
-
+        
 
 <!--
         1.text =>8
