--- a/form_style.html
+++ b/form_style.html
@@ -337,7 +337,7 @@
             <!--6.textarea - 총 1개-->
             <h3>Memo</h3>
             <div>
-                <textarea id="Memo" name="memo">Memo</textarea>
+                <textarea id="Memo" name="memo" style="width:50%;height:200px;">Memo</textarea>
 
             </div>
 
